crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__delete_empty_replace.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo bar baz
<!-- REPLACEMENTS -->
<!-- SEARCH -->bar 
<!-- REPLACE -->
<!-- FINAL -->foo baz
