crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__delete_single_line_only.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
---
<!-- INITIAL -->line1
line2
line1
line3
<!-- REPLACEMENTS -->
<!-- SEARCH -->line1

<!-- REPLACE -->
<!-- FINAL -->line2
line1
line3
