crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__emoji_replacement.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
---
<!-- INITIAL -->Hi 👋, how are you?
<!-- REPLACEMENTS -->
<!-- SEARCH -->👋
<!-- REPLACE -->👍
<!-- FINAL -->Hi 👍, how are you?
