crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__empty_search_text.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->
<!-- REPLACEMENTS -->
<!-- SEARCH -->
<!-- REPLACE -->foo
<!-- FINAL -->foo
