crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__exact_match_single_word.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->Hello World
<!-- REPLACEMENTS -->
<!-- SEARCH -->World
<!-- REPLACE -->Forge
<!-- FINAL -->Hello Forge
