crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__exact_threshold_match.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foox
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->bar
<!-- FINAL -->barx
