crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__fuzzy_match_with_prefix.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foox baz foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->afoo
<!-- REPLACE -->bar
<!-- FINAL -->barx baz foo
